// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить микроразметку: нет ссылки на комплектацию 1`] = `
<ol
  className="CardBreadcrumbsMicrodata"
  itemScope={true}
  itemType="http://schema.org/BreadcrumbList"
>
  <li
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://schema.org/ListItem"
    key="breadcrumbs-microdata-Toyota"
  >
    <a
      href="listing/category=cars&section=new&mark=toyota"
      itemProp="item"
      tabIndex="-1"
    >
      <meta
        content="Toyota"
        itemProp="name"
      />
    </a>
    <meta
      content={1}
      itemProp="position"
    />
  </li>
  <li
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://schema.org/ListItem"
    key="breadcrumbs-microdata-Camry"
  >
    <a
      href="listing/category=cars&section=new&mark=toyota&model=camry"
      itemProp="item"
      tabIndex="-1"
    >
      <meta
        content="Camry"
        itemProp="name"
      />
    </a>
    <meta
      content={2}
      itemProp="position"
    />
  </li>
  <li
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://schema.org/ListItem"
    key="breadcrumbs-microdata-Седан"
  >
    <a
      href="listing/category=cars&section=new&mark=toyota&model=camry&body_type_group=ALLROAD_5_DOORS"
      itemProp="item"
      tabIndex="-1"
    >
      <meta
        content="Седан"
        itemProp="name"
      />
    </a>
    <meta
      content={3}
      itemProp="position"
    />
  </li>
  <li
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://schema.org/ListItem"
    key="breadcrumbs-microdata-2.5 AT (181 л.с.)"
  >
    <a
      href="card-group/category=cars&section=new&mark=toyota&model=camry&tech_param_id=21221591"
      itemProp="item"
      tabIndex="-1"
    >
      <meta
        content="2.5 AT (181 л.с.)"
        itemProp="name"
      />
    </a>
    <meta
      content={4}
      itemProp="position"
    />
  </li>
  <li
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://schema.org/ListItem"
    key="breadcrumbs-microdata-Люкс Safety"
  >
    <meta
      content="Люкс Safety"
      itemProp="name"
    />
    <meta
      content={5}
      itemProp="position"
    />
  </li>
</ol>
`;

exports[`должен отрендерить хлебные крошки: есть ссылка на комплектацию 1`] = `
<ul
  className="BreadcrumbsGroup"
>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-mark"
  >
    <span
      className="BreadcrumbsGroup__itemText"
    >
      Продажа новых
    </span>
    <Link
      className="BreadcrumbsGroup__itemText"
      metrika="breadcrumb,mark"
      url="listing/category=cars&section=new&mark=toyota"
    >
      Toyota
    </Link>
    <IconSvg
      className="BreadcrumbsGroup__arrow"
      id="svgID"
      size="24"
    />
  </li>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-model"
  >
    <Link
      className="BreadcrumbsGroup__itemText"
      metrika="breadcrumb,model"
      url="listing/category=cars&section=new&mark=toyota&model=camry"
    >
      Camry
    </Link>
    <IconSvg
      className="BreadcrumbsGroup__arrow"
      id="svgID"
      size="24"
    />
  </li>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-body"
  >
    <Link
      className="BreadcrumbsGroup__itemText"
      metrika="breadcrumb,body"
      url="listing/category=cars&section=new&mark=toyota&model=camry&body_type_group=ALLROAD_5_DOORS"
    >
      Седан
    </Link>
    <IconSvg
      className="BreadcrumbsGroup__arrow"
      id="svgID"
      size="24"
    />
  </li>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-tech-param"
  >
    <Link
      className="BreadcrumbsGroup__itemText"
      metrika="breadcrumb,tech-param"
      url="card-group/category=cars&section=new&mark=toyota&model=camry&tech_param_id=21221591"
    >
      2.5 AT (181 л.с.)
    </Link>
    <IconSvg
      className="BreadcrumbsGroup__arrow"
      id="svgID"
      size="24"
    />
  </li>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-complectation"
  >
    <Link
      className="BreadcrumbsGroup__itemText"
      metrika="breadcrumb,complectation"
      url="card-group/category=cars&section=new&mark=toyota&model=camry&tech_param_id=21221591&complectation_id=21221863"
    >
      Люкс Safety
    </Link>
    <span
      className="BreadcrumbsGroup__itemText"
    >
       в Москве
    </span>
  </li>
</ul>
`;

exports[`должен отрендерить хлебные крошки: нет ссылки на комплектацию 1`] = `
<ul
  className="BreadcrumbsGroup"
>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-mark"
  >
    <span
      className="BreadcrumbsGroup__itemText"
    >
      Продажа новых
    </span>
    <Link
      className="BreadcrumbsGroup__itemText"
      metrika="breadcrumb,mark"
      url="listing/category=cars&section=new&mark=toyota"
    >
      Toyota
    </Link>
    <IconSvg
      className="BreadcrumbsGroup__arrow"
      id="svgID"
      size="24"
    />
  </li>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-model"
  >
    <Link
      className="BreadcrumbsGroup__itemText"
      metrika="breadcrumb,model"
      url="listing/category=cars&section=new&mark=toyota&model=camry"
    >
      Camry
    </Link>
    <IconSvg
      className="BreadcrumbsGroup__arrow"
      id="svgID"
      size="24"
    />
  </li>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-body"
  >
    <Link
      className="BreadcrumbsGroup__itemText"
      metrika="breadcrumb,body"
      url="listing/category=cars&section=new&mark=toyota&model=camry&body_type_group=ALLROAD_5_DOORS"
    >
      Седан
    </Link>
    <IconSvg
      className="BreadcrumbsGroup__arrow"
      id="svgID"
      size="24"
    />
  </li>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-tech-param"
  >
    <Link
      className="BreadcrumbsGroup__itemText"
      metrika="breadcrumb,tech-param"
      url="card-group/category=cars&section=new&mark=toyota&model=camry&tech_param_id=21221591"
    >
      2.5 AT (181 л.с.)
    </Link>
    <IconSvg
      className="BreadcrumbsGroup__arrow"
      id="svgID"
      size="24"
    />
  </li>
  <li
    className="BreadcrumbsGroup__item"
    key="breadcrumb-complectation"
  >
    <span
      className="BreadcrumbsGroup__itemText"
    >
      Люкс Safety
    </span>
    <span
      className="BreadcrumbsGroup__itemText"
    >
       в Москве
    </span>
  </li>
</ul>
`;
